fix: fixed scrollbar and blur background for firefox

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	padding: 0;
-	overflow: hidden;
+	overflow: auto;
+	background-color: #262626;
 }
 
 code {
